...
    <string name="clear_password_notifications">Clear password notifications</string>
    <string name="clear_recent">Clear Recent</string>
    <string name="close_file">Close File</string>
    <string name="close_file_screen_off">Close file on screen off</string>
    <string name="confirm">Confirm</string>
...
    <string name="file_close_timeout">File close timeout</string>
    <string name="file_exists">File exists</string>
    <string name="file">File</string>
    <string name="file_name">File Name</string>
    <string name="file_not_found_perm_denied">File not found or permission denied</string>
...
        password.  The file will open automatically.
    </string>
    <string name="file_operations">File Operations…</string>
    <string name="file_password_encoding">File password encoding</string>
    <string name="files">Files</string>
...
    <string name="notes_truncated_msg">\ … (truncated)</string>
    <string name="num_records">Number of records</string>
    <string name="ok">OK</string>
    <string name="open_file">Open %s</string>
    <string name="open_file_title">Open File</string>
    <string name="open_password_file">Open password file</string>
    <string name="option_not_selected">At least one option must be selected</string>
    <string name="password">Password</string>
    <string name="password_encoding">Password encoding</string>
    <string name="password_expiration">Password Expiration</string>
    <string name="password_expiration_in_past">Password expiration is in the past</string>
    <string name="password_expiration_invalid_interval">Interval must be in the range 1&#8211;3650</string>
...
    <string name="password_not_found">Password not found for %1$s</string>
    <string name="password_policy">Password Policy</string>
    <string name="password_policies">Password Policies</string>
    <string name="password_record">Password record</string>
    <string name="password_save_canceled_key_error">Password save canceled.  Failed to create an encryption key: %s</string>
...
    <string name="recent_files">Recent Files</string>
    <string name="record">Record</string>
    <string name="records">Records</string>
    <string name="record_errors">Record Errors</string>
    <string name="record_error_note">
...
    <string name="show_password">Show Password</string>
    <string name="show_passwords">Show Passwords</string>
    <string name="sort">Sort</string>
    <string name="sort_ascending">Sort ascending</string>
    <string name="symbols_used_by_default">Symbols used by default in a password policy: %1$s</string>
...
    <string name="view_password_expirations">View password expirations</string>
    <string name="word_wrap">Word Wrap</string>
    <string name="writable">Writable</string>
    <string name="yes">Yes</string>
    <string name="yubikey">YubiKey</string>
...

    <!-- lib -->
    <string name="about">About</string>
    <string name="app_settings">App Settings</string>
    <string name="box">Box</string>
...
    <string name="no_files">No Files</string>
    <string name="none">None</string>
    <string name="open">Open</string>
    <string name="onedrive">OneDrive</string>
    <string name="owncloud">ownCloud</string>
    <string name="parent_directory">Parent Directory</string>
    <string name="preferences">Preferences</string>
    <string name="release_notes_title">Release Notes</string>
    <string name="reload">Reload</string>
...
